# attendance_automation

./: .env.example  .gitignore  QUICKSTART.md  README.md  agent.py  bot.py  config.py  database.py  debug_config.py  debug_env.py  main.py  pyproject.toml  requirements.txt  schema-test-attendances-standardJSON.json  schema-test-users-standardJSON.json  seed_data.py  tools.py  utils.py  verify_schema.py
